--- a/public_html/content/themes/bradtca/assets/sass/journal.scss
+++ b/public_html/content/themes/bradtca/assets/sass/journal.scss
@@ -18,13 +18,16 @@ address { font-style: normal; }
 	-webkit-box-sizing: border-box; 
 }
 
+$font_size: 10px;
+
 body {
 	margin: 0;
 	padding: 0;
 	font-family: $SourceSansPro;
-	font-size: 21px;
+	font-size: $font_size;
 	background-color: #eee;
 	padding-bottom: 100px;
+	min-width: 850px;
 }
 
 a {
@@ -37,7 +40,7 @@ a {
 }
 
 pre {
-	font-size: 16px;
+	font-size: 1.6em;
 }
 
 .cols {
@@ -46,7 +49,7 @@ pre {
 
 input[type=email], input[type=text], input[type=password], textarea {
 	padding: 10px;
-	font-size: 18px;
+	font-size: 1.8em;
 	border: 0;
 }
 
@@ -75,18 +78,22 @@ button {
 
 $width: 600px;
 
+.container {
+	width: $width;
+	margin: 0 auto;
+}
+
 .page-title {
 	text-align: center;
 	padding: 0.5em 0 0.5em 0;
-	font-size: 4em;
+	font-size: 8.4em;
 	color: #333;
 	font-weight: 200;
 }
 
 .day-entries {
 	background-color: #fff;
-	width: $width;
-	margin: 0 auto 20px auto;
+	margin-bottom: 20px;
 	padding: 0 40px 20px 40px;
 	min-height: 160px;
 }
@@ -109,15 +116,14 @@ $width: 600px;
 
 	.actions {
 		position: absolute;
-		top: 0;
 		width: 100px;
 		right: -160px;
-		font-size: 14px;
+		font-size: 1.4em;
 		line-height: 1.2em;
 		font-family: $SourceSansPro;
 
 		.permalink {
-			font-size: 16px;
+			font-size: 1.6em;
 			font-family: $Lora;
 		}
 
@@ -136,7 +142,7 @@ $width: 600px;
 }
 
 .entry-title {
-	font-size: 24px;
+	font-size: 2.4em;
 	font-family: $Lora;
 	margin-bottom: 0.5em;
 }
@@ -144,6 +150,7 @@ $width: 600px;
 .entry-content {
 	font-family: $Lora;
 	position: relative;
+	font-size: 2.1em;
 
 	p {
 		line-height: 1.5em;
@@ -169,7 +176,7 @@ $width: 600px;
 }
 
 .shorty {
-	font-size: 28px;
+	font-size: 2.8em;
 
 	p {
 		line-height: 1.3em;
@@ -177,23 +184,17 @@ $width: 600px;
 }
 
 .month-year {
-	font-size: 21px;
-	width: $width;
+	font-size: 2.1em;
 	margin: 0 auto;
 	color: #999;
 	text-transform: uppercase;
 	font-weight: bold;
-	position: absolute;
-	top: 8px;
-	left: -300px;
-	width: 300px;
-	padding-right: 60px;
-	text-align: right;
+	padding: 20px 60px 20px 0;
 }
 
 .day {
 	position: absolute;
-	top: 40px;
+	top: 0;
 	left: -200px;
 	width: 200px;
 	padding-right: 60px;
@@ -204,14 +205,14 @@ $width: 600px;
 		display: block;
 		text-align: left;
 		text-transform: uppercase;
-		font-size: 16px;
+		font-size: 1.6em;
 		text-align: right;
 		padding-right: 4px;
 	}
 
 	.dom {
 		display: block;
-		font-size: 70px;
+		font-size: 7em;
 		font-weight: bold;
 		line-height: 60px;
 		text-align: right;
@@ -220,7 +221,7 @@ $width: 600px;
 }
 
 .tod {
-	font-size: 14px;
+	font-size: 1.4em;
 	color: #999;
 	border-bottom: 1px solid #ccc;
 	padding-bottom: 5px;
@@ -229,15 +230,14 @@ $width: 600px;
 }
 
 .new-entry {
-	width: $width;
-	margin: 0 auto 50px auto;
+	margin-bottom: 50px;
 
 	textarea {
 		width: 100%;
 		height: 150px;
 		outline: none;
 		font-family: $Lora;
-		font-size: 28px;
+		font-size: 2.8em;
 		padding: 20px;
 	}
 
@@ -246,7 +246,7 @@ $width: 600px;
 		background-color: $bgcolor;
 		border: 0;
 		color: #fff;
-		font-size: 16px;
+		font-size: 1.6em;
 		padding: 15px 40px;
 		text-transform: uppercase;
 		font-family: $SourceSansPro;
@@ -259,9 +259,6 @@ $width: 600px;
 }
 
 .paging {
-	width: $width;
-	margin: 0 auto;
-
 	div {
 		width: 290px;
 	}
@@ -284,5 +281,91 @@ $width: 600px;
 	.newer {
 		float: right;
 		text-align: right;
+	}
+}
+
+.floatingHeader {
+	position: fixed;
+	top: 0;
+	visibility: hidden;
+	background-color: #eee;
+	z-index: 10;
+}
+
+@media screen and (max-width: 850px) {
+	body {
+		min-width: 0;
+	}
+
+	.container {
+		width: 100%;
+	}
+
+	.page-title {
+		font-size: 3em;
+	}
+
+	.month-year {
+		font-size: 1.6em;
+		padding-bottom: 10px;
+		padding-top: 10px;
+	}
+
+	.day-entries {
+		padding: 0 20px 10px 20px;
+		margin-bottom: 0;
+	}
+
+	.journal-entry {
+		padding-bottom: 10px;
+
+		&:first-of-type {
+			padding-top: 20px;
+		}
+
+		.actions {
+			position: relative;
+			width: auto;
+			right: auto;
+			font-size: 1.2em;
+			margin-bottom: 0.5em;
+
+			.permalink {
+				font-size: 1em;
+			}
+
+			li {
+				display: inline;
+				margin-right: 1em;
+			}
+		}
+	}
+
+	.entry-title {
+		font-size: 1.8em;
+	}
+
+	.entry-content {
+		font-size: 1.6em;
+	}
+
+	.shorty {
+		font-size: 2em;
+	}
+
+	.new-entry {
+		textarea {
+			font-size: 2em;
+			display: block;
+		}
+
+		button {
+			width: 100%;
+			font-size: 2em;
+		}
+	}
+
+	.month-year {
+		padding-left: 20px;
 	}
 }
